"Save as..." context menu action entry for images

BUG: 303357